--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dice Rolling Program</title>
+    <title>Dice Roller</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body onload="rollDice()">
-    <h1>Dice Rolling Program</h1>
+    <h1>Dice Roller</h1>
     <div class="dice-container">
         <label for="dice1" class="dice-label">Dice 1:</label>
         <input id="dice1" type="text" class="readonly-field" readonly><br>
