--- a/index.html
+++ b/index.html
@@ -30,14 +30,8 @@
 <body onload="rollDice()">
     <h1>Dice Roller</h1>
     <div class="dice-container">
-        <label for="dice1" class="dice-label">Dice 1:</label>
+        <label for="dice1" class="dice-label">Dice:</label>
         <input id="dice1" type="text" class="readonly-field" readonly><br>
-
-        <label for="dice2" class="dice-label">Dice 2:</label>
-        <input id="dice2" type="text" class="readonly-field" readonly><br>
-
-        <label for="total" class="dice-label">Total:</label>
-        <input id="total" type="text" class="readonly-field" readonly><br><br>
 
         <button id="rollButton" autofocus onclick="rollDice()">Roll Dice</button>
     </div>
@@ -50,12 +44,8 @@
     <script>
         function rollDice() {
             const dice1 = Math.floor(Math.random() * 6) + 1;
-            const dice2 = Math.floor(Math.random() * 6) + 1;
-            const total = dice1 + dice2;
 
             document.getElementById('dice1').value = dice1;
-            document.getElementById('dice2').value = dice2;
-            document.getElementById('total').value = total;
 
             document.getElementById('rollButton').focus();
         }
