--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Dice Roller</h1>
     <div class="dice-container">
         <label for="dice1" class="dice-label">Dice:</label>
-        <input id="dice1" type="text" class="readonly-field" readonly><br>
+        <input id="dice1" type="text" class="readonly-field" readonly><br><br>
 
         <button id="rollButton" autofocus onclick="rollDice()">Roll Dice</button>
     </div>
