--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
 
     <footer>
+		<p>Just click the button to roll a six-sided die.</p>
         <p>Environment: Node Test</p>
         <p>Version: 2.04</p>
     </footer>
