--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <footer>
 		<p>Just click the button to roll a six-sided die.</p>
-        <p>Environment: Node Test</p>
-        <p>Version: 2.04</p>
+        <p>Environment: Roller Test</p>
+        <p>Version: 1.00</p>
     </footer>
 
     <script>
