--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <footer>
 		<p>Just click the button to roll a six-sided die.</p>
-        <p>Environment: Roller Test</p>
+        <p>Environment: Roller Production</p>
         <p>Version: 1.00</p>
     </footer>
 
