--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body onload="rollDice()">
-    <h1>Dice Roller</h1>
+    <h1>Dice Roller - Production</h1>
     <div class="dice-container">
         <label for="dice1" class="dice-label">Dice:</label>
         <input id="dice1" type="text" class="readonly-field" readonly><br><br>
