--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     </div>
 
     <footer>
-		<p>Just click the button to roll a six-sided die.</p>
+		<p>Press enter to roll dice.</p>
+		<p>If lost focus, click 'Roll Dice'.</p>
         <p>Environment: Roller Test</p>
-        <p>Version: 1.00</p>
+        <p>Version: 1.01</p>
     </footer>
 
     <script>
